# godot-openmpt

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
addons/godot-openmpt/: openmpt.gdextension
custom-godotcpp-build/: CMakeLists.txt
openmpt/soundlib/plugins/: DigiBoosterEcho.h  SymMODEcho.h
openmpt/soundlib/plugins/dmo/: Compressor.h  DMOPlugin.h  DMOUtils.h  Distortion.h  Echo.h  Gargle.h  I3DL2Reverb.h  ParamEq.h  WavesReverb.h
src/: audio_stream_mpt.cpp  audio_stream_mpt.h
